--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "dbml-viewer",
     "displayName": "DBML Live Preview",
     "description": "An extension for Visual Studio Code that provides real-time rendering of a database schema from the generated DBML code.",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "repository": {
         "type": "git",
         "url": "https://github.com/Durandal14/vscode-extension-dbml-viewer"
@@ -46,7 +46,7 @@
             },
             {
                 "command": "dbml-viewer.generateDbmlGraph",
-                "title": "Generate DBML Graph"
+                "title": "DBML: Generate DBML Graph"
             }
         ]
     },
@@ -64,22 +64,22 @@
     },
     "devDependencies": {
         "@types/glob": "^8.1.0",
-        "@types/mocha": "^10.0.1",
-        "@types/node": "^16.18.25",
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^22.10.5",
         "@types/vscode": "^1.77.0",
-        "@typescript-eslint/eslint-plugin": "^5.59.1",
-        "@typescript-eslint/parser": "^5.59.1",
-        "@vscode/test-electron": "^2.3.0",
-        "eslint": "^8.39.0",
-        "glob": "^8.1.0",
-        "mocha": "^10.2.0",
+        "@typescript-eslint/eslint-plugin": "^8.19.0",
+        "@typescript-eslint/parser": "^8.19.0",
+        "@vscode/test-electron": "^2.4.1",
+        "eslint": "^9.17.0",
+        "glob": "^11.0.0",
+        "mocha": "^11.0.1",
         "ts-loader": "^9.5.1",
         "typescript": "^5.7.2",
         "webpack": "^5.97.1",
-        "webpack-cli": "^5.1.4"
+        "webpack-cli": "^6.0.1"
     },
     "dependencies": {
         "@softwaretechnik/dbml-renderer": "^1.0.30",
-        "zod": "^3.22.4"
+        "zod": "^3.24.1"
     }
 }
